--- a/pom.xml
+++ b/pom.xml
@@ -174,5 +174,5 @@
             </plugin>
         </plugins>
     </build>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 </project>
