--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,17 @@
             <version>2.5.2</version>
             <scope>provided</scope>
         </dependency>
-         
+        <dependency> 
+            <groupId>com.tunyk.currencyconverter</groupId> 
+            <artifactId>currency-converter-api</artifactId> 
+            <version>1.0</version> 
+        </dependency>
+        
+        <dependency>
+            <groupId>org.javamoney</groupId>
+            <artifactId>moneta</artifactId>
+            <version>1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
@@ -113,7 +123,7 @@
         <dependency>
             <groupId>com.stripe</groupId>
             <artifactId>stripe-java</artifactId>
-            <version>7.26.0</version>
+            <version>10.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -174,5 +184,5 @@
             </plugin>
         </plugins>
     </build>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 </project>
